It's responsive. Just not responsive in the correct way...=D.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 *{
   box-sizing: border-box;
   margin: 0;
@@ -22,11 +23,11 @@
 
 html, body {
   position: relative;
-  height: 5%;
-  width: 110%;
+  height: 100%;
+  width: 100%;
 }
 
-body {
+.App {
   align-items: center;
   background: var(--Red);
   background-image: url('images/bg-intro-desktop.png');
@@ -86,7 +87,7 @@ span {
   font-weight: 400;
 }
 
-span {
+a {
   color: var(--Light-Purple);
   font-weight: 400;
 }
@@ -141,34 +142,33 @@ input::placeholder{
   font-weight: 700;
 }
 
-/*@media(max-width: 768px) {*/
+@media(max-width: 768px) {
 
-/*  html, body {*/
-/*    height: auto*/
-/*  }*/
+  html, body {
+    height: auto
+  }
 
-/*  body {*/
-/*    background-image: url("images/bg-intro-mobile.png");*/
-/*    background-repeat: no-repeat;*/
-/*    background-position: top;*/
-/*    background-size: auto;*/
-/*    margin: 5rem 0;*/
-/*  }*/
+  body {
+    background-image: url("images/bg-intro-mobile.png");
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: auto;
+    margin: 5rem 0;
+  }
 
-/*  .learnCode, .infoForm {*/
-/*    width: 100%;*/
-/*  }*/
+  .learnCode, .infoForm {
+    width: 100%;
+  }
 
-/*  .learnCode {*/
-/*    margin-bottom: 64px;*/
-/*    text-align: center;*/
-/*  }*/
+  .learnCode {
+    margin-bottom: 64px;
+    text-align: center;
+  }
 
-/*  .container {*/
-/*    width: 90%;*/
-/*    flex-direction: column;*/
-/*  }*/
+  .container {
+    width: 90%;
+    flex-direction: column;
+  }
 
 
-/*}*/
-
+}
